--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -1,8 +1,25 @@
 html {
   font-size: 10px;
+  min-height: 100%;
+  min-width: 100%;
+  background: #000000;
+  height: 100%;
 }
 body {
   margin: 0;
   padding: 0;
   font-family: Arial, Tahoma;
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
+}
+#root {
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
+}
+.App {
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
 }
